Updated Project Title and my name

--- a/Hotel_Bookings_Analysis.ipynb
+++ b/Hotel_Bookings_Analysis.ipynb
@@ -116,7 +116,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Name**    -\n",
+        "# **Project Name**    - Hotel Bookings Analysis\n",
         "\n"
       ],
       "metadata": {
@@ -126,12 +126,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**    - EDA/Regression/Classification/Unsupervised\n",
-        "##### **Contribution**    - Individual/Team\n",
-        "##### **Team Member 1 -**\n",
-        "##### **Team Member 2 -**\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
+        "##### **Project Type**    - EDA\n",
+        "\n",
+        "\n",
+        "\n",
+        "##### **Contribution**    - Individual\n",
+        "**Name** - Harsh Verma"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
