--- a/Hotel_Bookings_Analysis.ipynb
+++ b/Hotel_Bookings_Analysis.ipynb
@@ -292,7 +292,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from numpy import math\n",
+        "from numpy import loadtxt\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -312,7 +319,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "# Load csv file present in github repository using the raw url\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/hkv-code/EDA-Hotel_Booking_Analysis/main/Hotel%20Bookings.csv')"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -332,7 +340,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "df.head(5)"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -352,7 +361,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "df.shape"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -372,7 +382,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "df.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -392,7 +403,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "len(df[df.duplicated()])"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -412,7 +424,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "print(df.isnull().sum())"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -423,7 +436,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "sns.heatmap(df.isnull(), cbar=False)"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
