Progress till 17 July

--- a/Hotel_Bookings_Analysis.ipynb
+++ b/Hotel_Bookings_Analysis.ipynb
@@ -299,7 +299,7 @@
         "from numpy import loadtxt\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline"
+        "# %matplotlib inline"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -437,7 +437,8 @@
       "cell_type": "code",
       "source": [
         "# Visualizing the missing values\n",
-        "sns.heatmap(df.isnull(), cbar=False)"
+        "plt.figure(figsize = (12,4))\n",
+        "sns.heatmap(df.isnull(), cbar=False);"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -457,7 +458,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\n",
+        "*   The dataset has **119390** rows and **32** columns.\n",
+        "*   It has *31994* duplicate rows.\n",
+        "*   The dataset has missing values in 3 columns :\n",
+        "  - **country** - *488* missing values\n",
+        "  - **agent** - *16340* missing values\n",
+        "  - **company** - *112593* missing values\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -475,7 +489,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "df.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -486,7 +501,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "df.describe(include = 'all')"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -506,7 +522,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "- `hotel` - Type of hotel\n",
+        "- `is_canceled` - if the booking was cancelled? 0 for 'Yes', 1 for 'No'\n",
+        "- `lead_time` - Time between the booking into PMS and the Arrival Date\n",
+        "- `arrival_date_year` - Year of arrival date\n",
+        "- `arrival_date_month` - Month of arrival date\n",
+        "- `arrival_date_week_number` - Week number for arrival date\n",
+        "- `arrival_date_day_of_month` - Day of arrival date\n",
+        "- `stays_in_weekend_nights`- Number of weekend nights (Sat/Sun) the guest stayed or booked to stay at the hotel\n",
+        "- `stays_in_week_nights` - Number of week nights (Mon/Tue/Wed/Thu/Fri) the guest stayed or booked to stay at the hotel\n",
+        "- `adults` - Number of adults\n",
+        "- `children` - Number of children\n",
+        "- `babies` - Number of babies\n",
+        "- `meal` - Kind of meal opted for : BB (Bed and Breakfast), FB (Full Board), HB (Half Board), SC (Self-Catering), Undefined (-)\n",
+        "- `country` - Country code\n",
+        "- `market_segment` - Which segment the customer belongs to\n",
+        "  - Direct: Customers who book directly with the accommodation provider.\n",
+        "  - Corporate: Customers who book accommodations for business-related purposes.\n",
+        "  - Online TA: Customers who book through online travel agencies.\n",
+        "  - Offline TA/TO: Customers who book through traditional offline travel agencies or tour operators.\n",
+        "  - Complementary: Customers who receive complimentary or free accommodations.\n",
+        "  - Groups: Customers who book as part of a group or organized event.\n",
+        "  - Undefined: Segment not specified or categorized.\n",
+        "  - Aviation: Customers associated with the aviation industry requiring accommodations.\n",
+        "- `distribution_channel`\n",
+        "- `is_repeated_guest`\n",
+        "- `previous_cancellations`\n",
+        "- `previous_bookings_not_canceled`\n",
+        "- `reserved_room_type`\n",
+        "- `assigned_room_type`\n",
+        "- `booking_changes`\n",
+        "- `deposit_type`\n",
+        "- `agent`\n",
+        "- `company`\n",
+        "- `days_in_waiting_list`\n",
+        "- `customer_type`\n",
+        "- `adr`\n",
+        "- `required_car_parking_spaces`\n",
+        "- `total_of_special_requests`\n",
+        "- `reservation_status`\n",
+        "- `reservation_status_date`\n"
       ],
       "metadata": {
         "id": "aJV4KIxSnxay"
